--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -14,86 +14,80 @@
         android:orientation="vertical"
         app:w="300">
 
-
-        <com.m2comm.kingca2020.modules.customview.CustomView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="10dp"
             android:background="@color/main_color_navy"
+            />
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:orientation="horizontal"
-            app:h="41" >
+            android:background="@color/main_color_navy">
 
-            <com.m2comm.kingca2020.modules.customview.CustomImgView
-                android:id="@+id/menu_homeImg"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left|center_vertical"
-                app:w="44"
-                app:h="41"
-                app:imgW="40"
-                app:imgH="38"
-                app:img="@drawable/btn_d_home2"
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/kingca_menu_logo"
+                android:padding="10dp"
+                android:scaleType="fitCenter"
                 />
 
-            <com.m2comm.kingca2020.modules.customview.CustomTextView
-                android:id="@+id/menu_homeText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:gravity="center_vertical"
-                app:w="40"
-                app:h="41"
-                app:fontSize="14"
-                app:fontType="condensed"
-                android:text="HOME"
-                android:textColor="@color/main_color_white"
-                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
 
-            <com.m2comm.kingca2020.modules.customview.CustomView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:w="125"
-                />
+            <LinearLayout
+                android:id="@+id/menu_settingBt"
+                android:layout_width="90dp"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_marginRight="-10dp">
+                <ImageView
+                    android:layout_width="45dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/btn_d_setting"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="Setting"
+                    android:textColor="@android:color/white"
+                    android:textSize="11dp"
+                    android:layout_marginLeft="-10dp"
+                    android:gravity="center_vertical"/>
 
-            <com.m2comm.kingca2020.modules.customview.CustomImgView
-                android:id="@+id/menu_login_setting"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical"
-                android:layout_marginLeft="40dp"
-                app:w="44"
-                app:h="41"
-                app:imgW="40"
-                app:imgH="40"
-                app:img="@drawable/btn_d_setting"
-                android:visibility="gone"
-                />
+            </LinearLayout>
 
-            <com.m2comm.kingca2020.modules.customview.CustomImgView
-                android:id="@+id/menu_login_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left|center_vertical"
-                app:w="44"
-                app:h="41"
-                app:imgW="40"
-                app:imgH="38"
-                app:img="@drawable/btn_d_login2"
-                />
+            <LinearLayout
+                android:id="@+id/menu_appguideBt"
+                android:layout_width="90dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="45dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/menu_guide_img"
+                    android:padding="15dp"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="App guide"
+                    android:textColor="@android:color/white"
+                    android:textSize="11dp"
+                    android:layout_marginLeft="-10dp"
+                    android:gravity="center_vertical"/>
 
-            <com.m2comm.kingca2020.modules.customview.CustomTextView
-                android:id="@+id/menu_login_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:gravity="center_vertical"
-                app:fontType="condensed"
-                app:w="40"
-                app:fontSize="16"
-                android:text="Login"
-                android:textColor="@color/main_color_white"
-                />
+            </LinearLayout>
 
-        </com.m2comm.kingca2020.modules.customview.CustomView>
+
+        </LinearLayout>
 
         <!--Top 하단 선택영역-->
         <com.m2comm.kingca2020.modules.customview.CustomView
@@ -116,12 +110,12 @@
 
         </com.m2comm.kingca2020.modules.customview.CustomView>
 
-        <com.m2comm.kingca2020.modules.customview.CustomView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/white"
-            app:w="300"
-            app:h="440">
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:background="@android:color/white">
 
             <com.m2comm.kingca2020.modules.common.AnimatedExpandableListView
                 android:id="@+id/listView"
@@ -133,40 +127,48 @@
                 android:divider="@android:color/transparent"
                 android:groupIndicator="@null"
                 />
-        </com.m2comm.kingca2020.modules.customview.CustomView>
-
-        <com.m2comm.kingca2020.modules.customview.CustomView
-            android:id="@+id/boothBt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/main_color_white"
-            android:gravity="center"
-            app:h="60"
-            app:w="300">
-
-            <com.m2comm.kingca2020.modules.customview.CustomTextView
-                android:layout_width="wrap_content"
+            <com.m2comm.kingca2020.modules.customview.CustomView
+                android:id="@+id/boothBt"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="@drawable/edittext_borderline"
+                android:background="@color/main_color_white"
                 android:gravity="center"
-                android:text="Booth Event"
-                app:fontType="condensed"
-                android:textColor="@color/main_color_darkblue"
-                app:fontSize="16"
-                app:h="47"
-                app:w="250" />
+                android:orientation="horizontal"
+                app:h="60"
+                app:w="300"
+                android:layout_gravity="center">
 
-        </com.m2comm.kingca2020.modules.customview.CustomView>
+                <LinearLayout
+                    android:layout_width="250dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/edittext_borderline"
+                    >
 
-        <com.m2comm.kingca2020.modules.customview.CustomView
-            android:id="@+id/pieH1"
-            android:visibility="gone"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:h="40"
-            android:background="@android:color/white"
-            />
+                    <ImageView
+                        android:layout_marginLeft="60dp"
+                        android:layout_width="30dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/menu_event_img"
+                        android:padding="7dp"
+                        />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Booth Event"
+                        android:gravity="center_vertical"
+                        android:textSize="18dp"
+                        android:textColor="@color/main_color_darkblue"
+                        />
+                </LinearLayout>
+            </com.m2comm.kingca2020.modules.customview.CustomView>
+
+        </LinearLayout>
+
+
+
+
 
     </com.m2comm.kingca2020.modules.customview.CustomView>
 
